--- a/JiakSiMi/app/src/main/res/values/strings.xml
+++ b/JiakSiMi/app/src/main/res/values/strings.xml
@@ -1,17 +1,24 @@
-<resources >
-    <string name = "app_name" >Jiak Si Mi</string >
-    <string name = "food_list_title" >Menu</string >
-    <string name = "lobby_title" >Today Jiak Si Mi</string >
-    <string name = "adder_title" >Update your Menu</string >
-    <string name = "food_tab_1" >Meals</string >
-    <string name = "food_tab_2" >Meat/Diary</string >
-    <string name = "food_tab_3" >Vegetable</string >
-    <string name = "food_tab_4" >Soup</string >
-    <string-array name = "food_category" >
-        <item >Meals</item >
-        <item >Meat/Diary</item >
-        <item >Vegetable</item >
-        <item >Soup</item >
-    </string-array >
-    <string name = "title_activity_food_list" >Menu</string >
-</resources >
+<resources>
+    <string name="app_name">JiakSimi</string>
+    <!-- For PageView -->
+    <string name="rand_tab">Randomizer</string>
+    <string name="menu_tab">Menu</string>
+    <string name="adder_tab">Add item</string>
+
+    <!-- For Tab layout in menu-->
+    <string name="menu_sub_tab_1">Meals</string>
+    <string name="menu_sub_tab_2">Meat/Diary</string>
+    <string name="menu_sub_tab_3">Vegetable</string>
+    <string name="menu_sub_tab_4">Soup</string>
+
+    <!-- For spinners in adder-->
+    <string-array name="food_category">
+        <item>Meals</item>
+        <item>Meat/Diary</item>
+        <item>Vegetable</item>
+        <item>Soup</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+</resources>
